--- a/src/Common.cfg
+++ b/src/Common.cfg
@@ -1,5 +1,6 @@
 NumberOfPreferredNeighbors 2
 UnchokingInterval 5
-OptimisticUnchokingInterval 15FileName TheFile.dat
+OptimisticUnchokingInterval 15
+FileName TheFile.dat
 FileSize 10000232
 PieceSize 32768
