--- a/src/com/PeerInfo.cfg
+++ b/src/com/PeerInfo.cfg
@@ -1,6 +1,2 @@
-1001 lin114-01.cise.ufl.edu 6008 1
-1002 lin114-02.cise.ufl.edu 6008 0
-1003 lin114-03.cise.ufl.edu 6008 0
-1004 lin114-04.cise.ufl.edu 6008 0
-1005 lin114-05.cise.ufl.edu 6008 0
-1006 lin114-05.cise.ufl.edu 6008 0
+1001 dilip-Inspiron-3521 6008 1
+1002 DESKTOP-E10LEQ7 6008 0
