--- a/src/com/Common.cfg
+++ b/src/com/Common.cfg
@@ -2,5 +2,5 @@ NumberOfPreferredNeighbors 2
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
 FileName testfile.pdf
-FileSize 10000232
-PieceSize 32768
+FileSize 592174
+PieceSize 59217
