--- a/src/com/Common.cfg
+++ b/src/com/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 1
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName code.docx
-FileSize 18151
-PieceSize 1811
+FileName test.mp4
+FileSize 4091272
+PieceSize 4000
