--- a/src/com/Common.cfg
+++ b/src/com/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 2
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName code.docx
-FileSize 18151
-PieceSize 500
+FileName test.mp4
+FileSize 7057892
+PieceSize 700
