--- a/src/com/Common.cfg
+++ b/src/com/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 1
 UnchokingInterval 5
 OptimisticUnchokingInterval 15
-FileName test.mp4
-FileSize 7057892
-PieceSize 700000
+FileName test1.mp4
+FileSize 4091272
+PieceSize 10000
